H2 messagestore unit testing related dependencies updated in pom.xml